# llm-usage-monitor

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml  release.yml
src/: main.cpp
src/app/: LogPageWidget.cpp  LogPageWidget.h  MainWindow.cpp  MainWindow.h  OverviewPageWidget.cpp  OverviewPageWidget.h  ProviderEditorDialog.cpp  ProviderEditorDialog.h  SettingsPageWidget.cpp  SettingsPageWidget.h  UsagePageWidget.cpp  UsagePageWidget.h
src/core/: HttpJsonClient.cpp  HttpJsonClient.h  IProviderAdapter.h  Models.cpp  Models.h  MonitorService.cpp  MonitorService.h  ProviderFactory.cpp  ProviderFactory.h  ProviderParsers.cpp  ProviderParsers.h  SnapshotAnalytics.cpp  SnapshotAnalytics.h
src/providers/: AnthropicAdapter.cpp  AnthropicAdapter.h  DeepSeekAdapter.cpp  DeepSeekAdapter.h  GeminiAdapter.cpp  GeminiAdapter.h  OpenAiAdapter.cpp  OpenAiAdapter.h
src/storage/: CredentialStore.cpp  CredentialStore.h  SettingsStore.cpp  SettingsStore.h  SnapshotRepository.cpp  SnapshotRepository.h
tests/: CMakeLists.txt  CredentialStoreTests.cpp  ProviderParserTests.cpp  SnapshotAnalyticsTests.cpp
tests/fixtures/: anthropic_costs.json  deepseek_balance.json  gemini_models.json  openai_costs.json
